# nextcloud-cli

./: .env  .gitignore  README.md  auto_fix.sh  build.sh  configure_ldap.sh  configure_samba.sh  configure_talk_hpb.sh  docker-compose.talk-hpb.yml  docker-compose.yml  ldap.env.example  nextcloud-cli.py  nextcloud.env  nextcloud.env.example  onlyoffice_connect.sh  requirements.txt  sambaConfig.json  setup.cfg  setup_onlyoffice_cron.sh  talk-hpb.env.example
.github/workflows/: build-docker.yml
container_manager/: __init__.py  main.py
migration/: docker-compose.override.yml  migrate_db.sh
nextcloud-nginx/: Dockerfile  nextcloud.local.crt  nextcloud.local.key  nginx-talk-hpb.conf.template  nginx.conf
