[metadata]
name = container-manager
version = 0.1.0
author = Dein Name
author_email = dein@example.com
description = Ein CLI-Tool, um Docker-Container (Nextcloud, MariaDB, Redis usw.) interaktiv zu erstellen.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/deinname/container-manager
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    click
    rich
    pyyaml
    requests
    packaging
    InquirerPy
    docker

[options.entry_points]
console_scripts =
    netzint-cli = container_manager.main:main
